<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Research Aide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="showInfo">Your Information</string>
    <string name="Welcome">Welcome to ResearchAide</string>
    <string name="changePassword">Change Your Password</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="old_password">Old Password</string>
    <string name="new_password1">New Password</string>
    <string name="new_password2">Retype New Password</string>
    <string name="change_password">Change Password</string>
    <string name="back">Back</string>
    <string name="title_activity_schedule">Get Schedule</string>
    <string name="title_activity_direction">Get Directions</string>
    <string name="title_activity_friend">Tell a Friend</string>
    <string name="title_activity_compensation">Compensation Status</string>
    <string name="title_activity_contact">Contact Us</string>
    <string name="title_activity_consent">Consent Form</string>
    <string name="title_activity_more">Learn More About ITMAT</string>
    <string name="title_activity_getcontacts">Get a contact</string>
    <string name="title_activity_sendSMS">Send a SMS</string>
    <string name="location1">Division of Geriatric Medicine</string>
    <string name="location2">Penn Therapy and Fitness</string>
    <string name="location3">Presbyterian Medical Center: Neurology</string>
    <string name="logo">Logo</string>
    <string name="sentSMS">Send Message</string>
    <string name="enterNo">Enter phone Number:</string>
    <string name="message">Enter Message:</string>
	<string name="contact">Contacts</string>
    <string name="schedule">Study Schedule</string>
    <string name="compensation">Compensation Status</string>
    <string name="subject">Subject</string>
    <string name="contact_us">Contact Us</string>

</resources>