<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B8E6"
    android:orientation="vertical" >

    <Button
        android:id="@+id/firstLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onLocation1ButtonClick"
        android:padding="10dp"
        android:text="@string/location1" />

    <Button
        android:id="@+id/secondLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onLocation2ButtonClick"
        android:padding="10dp"
        android:text="@string/location2" />

    <Button
        android:id="@+id/thirdLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onLocation3ButtonClick"
        android:padding="10dp"
        android:text="@string/location3" />

</LinearLayout>