<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B8E6" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.upenn.med.researchaide.ChangePasswordActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:background="@drawable/login_bg"
        android:padding="10dp" >
        
        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
     		android:hint="@string/old_password"
            android:inputType="textPassword" 
            android:singleLine="true"/>
        
         <EditText
            android:id="@+id/newPassword1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
     		android:hint="@string/new_password1"
            android:inputType="textPassword" 
            android:singleLine="true"/>
         
         <EditText
            android:id="@+id/newPassword2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
     		android:hint="@string/new_password2"
            android:inputType="textPassword" 
            android:singleLine="true"/>

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:text="@string/change_password" 
            android:onClick="onConfirmChangeButtonClick"/>
        
    </LinearLayout>

</RelativeLayout>
