<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B8E6" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.upenn.med.researchaide.ChangePasswordActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:background="@drawable/login_bg"
        android:padding="10dp" >
        
        <EditText
            android:id="@+id/subject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
     		android:hint="@string/subject"
            android:inputType="text" 
            android:singleLine="true"/>
        
         <EditText
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
     		android:hint="@string/message"
            android:inputType="text" 
            android:singleLine="false"/>

        <Button
            android:id="@+id/contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:text="@string/contact_us" 
            android:onClick="onSendButtonClick"/>
        
    </LinearLayout>

</RelativeLayout>
