<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.upenn.med.researchaide.MainActivity" 
    android:background="#E0F5FF">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp" >
        
        <EditText 
            android:id="@+id/username"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/username" />
        
        <EditText 
            android:id="@+id/password"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/password" />
        
        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:text="@string/log_in"
            android:onClick="logIn" />
        
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:text="@string/sign_up" 
            android:onClick="signUp"/>
        
    </LinearLayout>
	
</RelativeLayout>
